# raspi-HelloWorld

./: CMakeLists.txt  README.txt  backup.cpp  main.cpp  mounter.sh
_shared/: rf24
bin.old/: RaspiHelloWorld
cmake/: Config.cmake  FindPoco.cmake  Toolchain-GCC.cmake  Toolchain-RaspberryPi.cmake
include/: GPIO.h
tests/: CMakeLists.txt
tests/basic_tests/: CMakeLists.txt  basic_check.cpp
